tidying up code

--- a/heroes.html
+++ b/heroes.html
@@ -28,20 +28,20 @@
     <ul id="buttons">
       <li><a id="buttonsMenu">Filter</a></li>3
   </nav>
-  <nav>
+  <!--<nav>
     <div>
-      <input type="button" id="over90" value=`{Power>90}`>
+      <input type="button" id="over90" value=`{PowerOve90}`>
     </div>
-  </nav>
-  <main id="gridly">
+  </nav>-->
+  <main id="mainGrid">
     <h1>W06: Project</h1>
-    <h2>Fetch(): Some Movie Heroes</h2>
+    <h2>Some Movie Heroes</h2>
 
     <select id="filtered" title="Choose a data filter.">
       <option value="" disabled selected>Filter Heroes</option>
-      <option value="stephanie powell">Stephanie Powell</option>
-      <option value="notutah">Outside of Utah</option>
-      <option value="older">Built Before 1950</option>
+      <option value="powerOver90">Power Over 90</option>
+      <option value="powerUnder20">Power Under 20</option>
+      <option value="heightOver180">Height Over 180 cm</option>
       <option value="all">No Filter</option>
     </select>
 
