added more filters for publishers

--- a/heroes.html
+++ b/heroes.html
@@ -41,6 +41,11 @@
       <option value="heightOver180">Height Over 180 cm</option>      
       <option value="heightUnder170">Height Under 170 cm</option>
       <option value="marvelComics">Marvel Comics</option>
+      <option value="redRobin">Red Robin</option>
+      <option value="abcStudios">ABC Studios</option>
+      <option value="dcComics">DC Comics</option>
+      <option value="nbcHeroes">NBC - Heroes</option>
+      <option value="universalStudios">Universal Studios</option>
       <option value="all">No Filter</option>
     </select>
 
