Tidying up code

--- a/heroes.html
+++ b/heroes.html
@@ -46,7 +46,7 @@
       <option value="dcComics">DC Comics</option>
       <option value="nbcHeroes">NBC - Heroes</option>
       <option value="universalStudios">Universal Studios</option>
-      <option value="marvelComics&powerOver90">Marvel Comics & Power Over 90</option>
+      <option value="marvelComics&PowerOver90">Marvel Comics & Power Over 90</option>
       <option value="all">No Filter</option>
     </select>
 
