tydied up code including css

--- a/heroes.html
+++ b/heroes.html
@@ -50,11 +50,9 @@
       <option value="all">No Filter</option>
     </select>
 
-    <div id="heroes">
-    </div>
+    <div id="heroes"></div>
 
   </main>
-
 
   <footer>
     &copy;<span id="year"></span> | Week 06 - Fetching Heroes Data | CSE 121b
