--- a/heroes.html
+++ b/heroes.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="styles/mainHeroes.css">
+  <link rel="stylesheet" href="finalProject/styles/mainHeroes.css">
 </head>
 
 <body>
@@ -61,7 +61,7 @@
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
-  <script src="scripts/heroes.js"></script>
+  <script src="finalProject/script/heroes.js"></script>
   
 </body>
 
