modifed w05-task.js and .html

--- a/w05-task.html
+++ b/w05-task.html
@@ -32,7 +32,8 @@
       <option value="" disabled selected>Filter Temples</option>
       <option value="utah">Utah</option>
       <option value="notutah">Outside of Utah</option>
-      <option value="older">Built Before 1950</option>
+      <option value="older">Dedicated Before 1950</option>
+      <option value="newer">Dedicated After 2000</option>
       <option value="all">No Filter</option>
     </select>
 
